<resources>
    <string name="app_name">AndroidTest</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="my_android_test">My Android Test</string>
    <string name="my_android_result">Result Fail</string>
    <string name="my_android_welcome">Welcome Activity</string>
    <string name="my_android_tips_activity">Tips Activity</string>
    <string name="finish">finish</string>
    <string name="unbind_service">unBind Service</string>
    <string name="bind_service">bind Service</string>
    <string name="stop_service">stop Service</string>
    <string name="start_service">Start Service</string>
    <string name="tips_activity">Tips Activity</string>
    <string name="welcome_activity">Welcome Activity</string>
    <string name="start_intentservice">Start IntentService</string>
    <string name="title_activity_calculator">calculatorActivity</string>
    <string name="add">相加</string>
    <string name="sub">相减</string>
    <string name="mul">相乘</string>
    <string name="div">相除</string>
    <string name="title_activity_ndkdemo_acitivity">NdkdemoAcitivity</string>
</resources>